# safe_client_libs

./: CHANGELOG.md  Cargo.toml  client_log
.github/workflows/: pr.yml
safe_app/: Cargo.toml
safe_app/src/ffi/: mod.rs
safe_authenticator/: Cargo.toml
safe_authenticator/src/: apps.rs  lib.rs  revocation.rs
safe_authenticator/src/ffi/: apps.rs  mod.rs
safe_core/: Cargo.toml
safe_core/src/: config_handler.rs  lib.rs  self_encryption_storage.rs
safe_core/src/client/: core_client.rs  mod.rs
safe_core/src/client/mock/: vault.rs
safe_core/src/connection_manager/: connection_group.rs
safe_core/src/ipc/: resp.rs
safe_core/src/rdf/: mod.rs  serialisation.rs
safe_core/src/utils/: mod.rs
src/: connection_manager.rs  errors.rs
src/client/: blob_apis.rs  map_apis.rs  mod.rs  sequence_apis.rs
src/client/transfer_actor/: balance_management.rs  mod.rs  simulated_payouts.rs
src/connections/: messaging.rs
