[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE core"
documentation = "https://docs.rs/safe_core"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_core"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.32.1"
edition = "2018"

[dependencies]
data-encoding = "~2.1.1"
chrono = { version = "~0.4.0", features = ["serde"] }
config_file_handler = "~0.11.0"
ffi_utils = "~0.12.0"
fs2 = "~0.4.3"
futures = "~0.1.17"
lazy_static = "~1.2.0"
log = "~0.4.1"
lru-cache = "~0.1.1"
maidsafe_utilities = "~0.16.0"
rand = "~0.3.18"
routing = { git = "https://github.com/lionel1704/routing", branch = "rdf" }
rust_sodium = "~0.10.2"
self_encryption = { git = "https://github.com/lionel1704/self_encryption", branch = "rdf" }
tiny-keccak = "~1.4.1"
tokio = "=0.1.8"
redland-rs = { git = "https://github.com/lionel1704/redland-rs" }
serde = "~1.0.89"
serde_derive = "~1.0.89"
tokio-core = "~0.1.17"
unwrap = "~1.2.0"
hex_fmt = "0.3.0"

[dev-dependencies]
serde_json = "~1.0.9"

[features]
mock-network = []
testing = []
